2005-04-02  Alexandre Oliva  <aoliva@redhat.com>

	PR middle-end/20491
	* final.c (alter_subreg): Don't call subreg_regno for a non-REG.

2005-04-02  Alexandre Oliva  <aoliva@redhat.com>

	PR rtl-optimization/20290
	* loop.c (for_each_insn_in_loop): Don't assume the loop body runs
	in every iteration if the entry point is the exit test.

2005-04-02  Hans-Peter Nilsson  <hp@axis.com>

	* config/cris/cris.md (attribute "length"): Define.

2005-04-02  Geoffrey Keating  <geoffk@apple.com>

	* config/rs6000/predicates.md (indexed_or_indirect_operand): New.
	(word_offset_memref_operand): New.
	* config/rs6000/rs6000-protos.h (word_offset_memref_operand): Delete.
	(indexed_or_indirect_operand): Delete.
	* config/rs6000/rs6000.c (word_offset_memref_operand): Delete.
	(indexed_or_indirect_operand): Delete.

	* config/rs6000/t-darwin8: Comment out ppc64 multilib.

	PR 20650
	* config/rs6000/rs6000.md (fix_truncdfsi2): Make destination
	a register.

	* config/rs6000/t-darwin (TARGET_LIBGCC2_CFLAGS): Add -pipe.
	* config/t-darwin (TARGET_LIBGCC2_CFLAGS): Likewise.

2005-04-01  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* gcc/config/vax/vax.md: Spellcheck, fix whitespace.

2005-04-01  Ian Lance Taylor  <ian@airs.com>

	* gcc.c: Don't include <sys/resource.h> or declare getrusage.
	(rus, prus): Remove static variables.
	(execute): Use pex_run/pex_get_status rather than pexecute/pwait.
	(process_command): Permit report_times and use_pipes together.

2005-04-01  Joseph S. Myers  <joseph@codesourcery.com>

	* c-decl.c (validate_proto_after_old_defn): Look at
	TYPE_MAIN_VARIANT of argument types.

2005-04-01  Paul Brook  <paul@codesourcery.com>

	* config/arm/arm.c (thumb_call_via_label): Include space for SP.
	(arm_output_function_epilogue): Allow call_via_SP.
	(thumb_call_via_reg, arm_file_end): Ditto.
	* config/arm/arm.h (struct machine_function): Include space for SP.
	(thumb_call_via_label): Update declaration.

2005-04-01  Ian Lance Taylor  <ian@airs.com>
