@@ -1,5 +1,10 @@
 2005-04-02  Alexandre Oliva  <aoliva@redhat.com>
 
+	PR tree-optimization/20640
+	* gcc.dg/torture/tree-loop-1.c: New.
+
+2005-04-02  Alexandre Oliva  <aoliva@redhat.com>
+
 	PR rtl-optimization/20290
 	* gcc.c-torture/execute/loop-ivopts-2.c: New.
 
