@@ -1,5 +1,13 @@
 2005-04-02  Alexandre Oliva  <aoliva@redhat.com>
 
+	PR tree-optimization/20640
+	* tree-ssa-dce.c (remove_dead_stmt): Don't redirect edge to
+	post-dominator if it has phi nodes.
+	(eliminate_unnecessary_stmts): Remove dead phis in all blocks
+	before dead statements.
+
+2005-04-02  Alexandre Oliva  <aoliva@redhat.com>
+
 	PR middle-end/20491
 	* final.c (alter_subreg): Don't call subreg_regno for a non-REG.
 
